rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__adjusts_pointer_position_correctly_for_truncated_diagnostics.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test diagnostic positioning (test-positioning)

/test/file.erb:1:50

  →   1 │ …ame-that-should-be-truncated">Cont…
        │             ~~~~~
