rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__aligns_markers_to_the_content_when_line_numbers_are_hidden.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[warning] Multi-line offense (multi-line-rule)


  <div id="gems">
    <% @gems.each do |topic_gem| %>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      <%= render partial: "gem_card" %>
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    <% end %>
    ~~~~~~~~~
  </div>
