rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__dims_context_lines_over_rgb_colors.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: result
---
[[1m[91merror[0m[0m] Bad span (dim-rule)

[36m/test/file.erb[0m:[36m2:2[0m

    [90m  1[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
[91m  → [0m[1m  2[0m [90m│[0m   [38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mbad[0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m
        [90m│[0m   [91m~~~~~~[0m
    [90m  3[0m [90m│[0m [2m  [22m[2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mok[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
    [90m  4[0m [90m│[0m [2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
