rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__does_not_mark_blank_lines_inside_the_span.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

/test/file.erb:1:0

  →   1 │ <% if true %>
        │ ~~~~~~~~~~~~~
      2 │ 
  →   3 │ <% end %>
        │ ~~~~~~~~~
