rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__does_not_truncate_when_max_width_is_sufficient.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: stripped
---
[error] Test short line (test-short)

/test/file.erb:1:13

  →   1 │ <div class="short">Content</div>
        │              ~~~~~
