rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__handles_custom_context_lines.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

/test/file.erb:5:1

      4 │ line 4
  →   5 │ line 5 error
        │  ~~~~
      6 │ line 6
