rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__handles_edge_cases_for_line_boundaries.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

/test/file.erb:1:1

  →   1 │ single line
        │  ~~~~
