rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__handles_invalid_line_numbers_gracefully.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

/test/file.erb:999:1
