rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__handles_multi_character_error_ranges.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

/test/file.erb:2:5

      1 │ line 1
  →   2 │ line <long error> content
        │      ~~~~~~~~~~
      3 │ line 3
