rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__hides_line_numbers_when_requested.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

line 1
line <error> content
     ~~~~~
line 3
